--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +13,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+@font-face {
+  font-family: "Hanson-Bold";
+  font-display: swap;
+  src: local('Hanson-Bold'), url('./assets/fonts/Hanson-Bold.otf') format('opentype'),
+      url('./assets/fonts/Hanson-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: bold;
+}
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
